# panda

./: panda-cli.py  panda-helper  panda.py  setup.py
kcm_panda/: CMakeLists.txt  helper.cpp  kcmpanda.actions  panda.cpp  panda.desktop  panda.h  panda_parser.cpp  panda_parser.h
